# todolist-rust

./: .env.example  Cargo.toml  todo-list.sublime-project  todo-list.sublime-workspace
src/: main.rs
src/domain/: todo.rs
src/domain/todo/: todo.rs
src/framework/: config.rs  mod.rs  server.rs
src/framework/controllers/: mod.rs  not_found.rs  task.rs  todo.rs  untitled.sublime-workspace
src/framework/db/: mem.rs
src/framework/templates/: index.html
templates/: layout.html
templates/404/: index.html
templates/components/: errors.html  forms.html  menu.html
templates/task/: list.html
templates/todo/: new.html
