[package]
name = "todolist-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tera = "1.20.0"
uuid = { version = "1.17.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"]}
